orange-box (1.13) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 May 2014 21:12:16 -0500

orange-box (1.12-0ubuntu1) utopic; urgency=medium

  * debian/postinst:
    - fix typo in ip allocation

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 05 May 2014 21:12:14 -0500

orange-box (1.11-0ubuntu1) utopic; urgency=medium

  * debian/control, debian/postinst, debian/preinst, usr/bin/orange-box-
    add-all-nodes, usr/bin/orange-box-setup-kvms => usr/bin/orange-box-
    add-virtual-nodes, usr/share/doc/orange-box/examples/openstack/00-
    bootstrap.sh:
    - add a VM on the master node to MAAS
      + useful for running the Juju GUI
    - install libvirt-bin, qemu-kvm, virtinst
    - configure the internal interface to be a bridge, so that we
      can host a virtual machine here
    - tag real nodes as 'physical' (note, this isn't yet working)
    - update the setup-kvms script to create one single virtual machine
      node and add to MAAS
    - update openstack example documentation to bootstrap onto a vm

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 04 May 2014 23:51:32 -0500

orange-box (1.10-0ubuntu1) utopic; urgency=medium

  * Re-release, this time with:
  * debian/control, debian/postinst, usr/share/orange-box/orange-box-
    background.png:
    - add explicity dependencies for remmina and gsettings
    - set the desktop background to an orange box image
    - clean up the default launcher favorites

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 02 May 2014 17:38:54 -0500

orange-box (1.9-0ubuntu1) utopic; urgency=medium

  * usr/share/orange-box/nodelists/OrangeBox03:
    - added node list of mac addresses
    - I expect to deprecate and remove all of these very soon, however
  * debian/postinst:
    - clean up user's examples directory; this was causing reinstalls to fail

 -- Dustin Kirkland <kirkland@ubuntu.com>  Fri, 02 May 2014 17:37:16 -0500

orange-box (1.8-0ubuntu1) unstable; urgency=medium
