@@ -23,6 +23,7 @@ Depends: ${misc:Depends},
  openssh-server,
  maas,
  maas-cluster-controller,
+ network-manager,
  nmap,
  pastebinit,
  qemu-kvm,
